--- a/styles.scss
+++ b/styles.scss
@@ -48,6 +48,39 @@ h1.first{
             width: 100%;
             max-height: 100vh;
             object-fit: contain;
+            margin-top: -2rem;
         }
+    }
+}
+
+
+.intro {
+    padding-block: 20rem;
+    display: flex;
+    justify-content: center;
+    @include mobile{
+        padding-block: 14rem;
+    }
+    h2{
+        width: 50%;
+        font-style: italic;
+        font-size: 2rem;
+        @include tablet{
+            font-size: 1.5rem;
+            width: 60%;
+        }
+        @include mobile{
+            font-size: 1.25rem;
+            width: 80%;
+        }
+    }
+}
+h1.second{
+    position: absolute;
+    left: 5%;
+    @include mobile{
+        margin-top: 60%;
+        left: -20%;
+        font-size: 10rem;
     }
 }
