--- a/styles.css
+++ b/styles.css
@@ -267,4 +267,129 @@ h1.second {
     left: -20%;
     font-size: 10rem;
   }
+}
+
+#features {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+#features .row {
+  display: flex;
+  margin: 0 auto;
+  gap: 8rem;
+  align-items: center;
+  margin-left: 4rem;
+  margin-bottom: 50vh;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row {
+    gap: 1.5rem;
+    margin-left: 0rem;
+  }
+}
+@media (max-width: 600px) {
+  #features .row {
+    flex-direction: column;
+    margin-left: 0rem;
+    margin-top: 20vh;
+    margin-bottom: 30vh;
+  }
+}
+#features .row .img-stack {
+  position: relative;
+}
+#features .row .img-stack img:nth-child(1) {
+  height: 65vh;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row .img-stack img:nth-child(1) {
+    height: 50vh;
+  }
+}
+@media (max-width: 600px) {
+  #features .row .img-stack img:nth-child(1) {
+    height: 50vh;
+  }
+}
+#features .row .img-stack img:nth-child(2) {
+  height: 40vh;
+  box-shadow: -8px 12px 4px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  bottom: -20%;
+  right: -30%;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row .img-stack img:nth-child(2) {
+    height: 30vh;
+    right: -10%;
+    bottom: -30%;
+  }
+}
+@media (max-width: 600px) {
+  #features .row .img-stack img:nth-child(2) {
+    height: 25vh;
+    right: -10%;
+    bottom: -30%;
+  }
+}
+#features .row .text {
+  margin-top: 2.5rem;
+}
+#features .row .text .detail {
+  padding-left: 1rem;
+  width: 80%;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row .text .detail {
+    padding-left: 0;
+    margin-top: 2.5rem;
+  }
+  #features .row .text .detail p {
+    font-size: 0.75rem;
+    width: 100%;
+    display: inline;
+  }
+}
+@media (max-width: 600px) {
+  #features .row .text .detail {
+    padding-left: 0rem;
+    width: 90%;
+  }
+  #features .row .text .detail p {
+    font-size: 0.75rem;
+    width: 100%;
+    display: inline;
+  }
+}
+#features .row .text .detail h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row .text .detail h3 {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 600px) {
+  #features .row .text .detail h3 {
+    font-size: 1.25rem;
+    width: 80%;
+  }
+}
+#features .row .text .detail:nth-child(2) {
+  margin-top: 6rem;
+  margin-left: 8rem;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row .text .detail:nth-child(2) {
+    margin-top: 6rem;
+    margin-left: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  #features .row .text .detail:nth-child(2) {
+    margin-top: 3rem;
+    margin-left: 2rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
