--- a/styles.scss
+++ b/styles.scss
@@ -84,3 +84,109 @@ h1.second{
         font-size: 10rem;
     }
 }
+
+
+
+#features{
+    height: fit-content;
+    .row{
+        display: flex;
+        margin: 0 auto;
+        gap: 8rem;
+        align-items: center;
+        margin-left: 4rem;
+        margin-bottom: 50vh;
+        @include tablet{
+            gap: 1.5rem;
+            margin-left: 0rem;
+        }
+        @include mobile{
+            flex-direction: column;
+            margin-left: 0rem;
+            margin-top: 20vh;
+            margin-bottom: 30vh;
+        }
+        .img-stack{
+            position: relative;
+            img{
+                //position: absolute;
+            }
+            img:nth-child(1){
+                height: 65vh;
+                @include tablet{
+                    height: 50vh;
+                }
+                @include mobile{
+                    height: 50vh;
+                }
+            }
+            img:nth-child(2){
+                height: 40vh;
+                box-shadow: -8px 12px 4px rgba($color: #000, $alpha: 0.25);
+                position: absolute;
+                bottom: -20%;
+                right: -30%;
+                @include tablet{
+                    height: 30vh;
+                    right: -10%;
+                    bottom: -30%;
+                }
+                @include mobile{
+                    height: 25vh;
+                    right: -10%;
+                    // right: 20%;
+                    bottom: -30%;
+                }
+            }
+        }
+        .text{
+            margin-top: 2.5rem;
+            .detail{
+                padding-left: 1rem;
+                width: 80%;
+                @include tablet{
+                    padding-left: 0;
+                    margin-top: 2.5rem;
+                    p{
+                        font-size: 0.75rem;
+                        width: 100%;
+                        display: inline;
+                    }
+                }
+                @include mobile{
+                    padding-left: 0rem;
+                    width: 90%;
+                    p{
+                        font-size: 0.75rem;
+                        width: 100%;
+                        display: inline;
+                    }
+                }
+                h3{
+                    font-size: 1.5rem;
+                    margin-bottom: 1.5rem;
+                    @include tablet{
+                        font-size: 1rem;
+                        margin-bottom: 1rem;
+                    }
+                    @include mobile{
+                        font-size: 1.25rem;
+                        width: 80%;
+                    }
+                }
+            }
+            .detail:nth-child(2){
+                margin-top: 6rem;
+                margin-left: 8rem;
+                @include tablet{
+                    margin-top: 6rem;
+                    margin-left: 2rem;
+                }
+                @include mobile{
+                    margin-top: 3rem;
+                    margin-left: 2rem;
+                }
+            }
+        }
+    }
+}
