--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,7 @@ nav ul {
 @media (max-width: 600px) {
   .special {
     font-size: 14rem;
+    overflow: hidden;
   }
 }
 
@@ -285,6 +286,7 @@ h1.second {
   #features .row {
     gap: 1.5rem;
     margin-left: 0rem;
+    margin-bottom: 35vh;
   }
 }
 @media (max-width: 600px) {
@@ -303,7 +305,7 @@ h1.second {
 }
 @media screen and (min-width: 600px) and (max-width: 1100px) {
   #features .row .img-stack img:nth-child(1) {
-    height: 50vh;
+    height: 40vh;
   }
 }
 @media (max-width: 600px) {
@@ -320,7 +322,7 @@ h1.second {
 }
 @media screen and (min-width: 600px) and (max-width: 1100px) {
   #features .row .img-stack img:nth-child(2) {
-    height: 30vh;
+    height: 20vh;
     right: -10%;
     bottom: -30%;
   }
@@ -341,7 +343,7 @@ h1.second {
 }
 @media screen and (min-width: 600px) and (max-width: 1100px) {
   #features .row .text .detail {
-    padding-left: 0;
+    padding-left: 1.5rem;
     margin-top: 2.5rem;
   }
   #features .row .text .detail p {
@@ -391,5 +393,128 @@ h1.second {
   #features .row .text .detail:nth-child(2) {
     margin-top: 3rem;
     margin-left: 2rem;
+  }
+}
+#features .row:nth-child(2) {
+  flex-direction: row-reverse;
+  margin-left: 0;
+}
+@media (max-width: 600px) {
+  #features .row:nth-child(2) {
+    flex-direction: column;
+  }
+}
+#features .row:nth-child(2) .img-stack {
+  position: relative;
+}
+#features .row:nth-child(2) .img-stack img:nth-child(1) {
+  height: 60vh;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row:nth-child(2) .img-stack img:nth-child(1) {
+    height: 40vh;
+  }
+}
+@media (max-width: 600px) {
+  #features .row:nth-child(2) .img-stack img:nth-child(1) {
+    height: 45vh;
+  }
+}
+#features .row:nth-child(2) .img-stack img:nth-child(2) {
+  height: 40vh;
+  box-shadow: 8px 12px 4px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  bottom: -40%;
+  left: -25%;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row:nth-child(2) .img-stack img:nth-child(2) {
+    height: 20vh;
+    left: -10%;
+    bottom: -30%;
+  }
+}
+@media (max-width: 600px) {
+  #features .row:nth-child(2) .img-stack img:nth-child(2) {
+    height: 25vh;
+    left: -10%;
+    bottom: -30%;
+  }
+}
+#features .row:nth-child(2) .text {
+  margin-top: 2.5rem;
+}
+#features .row:nth-child(2) .text .detail {
+  width: 100%;
+  float: right;
+  margin-top: 10rem;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row:nth-child(2) .text .detail {
+    padding-left: 0;
+    margin-top: 2.5rem;
+  }
+  #features .row:nth-child(2) .text .detail p {
+    font-size: 0.75rem;
+    width: 100%;
+    display: inline;
+  }
+}
+@media (max-width: 600px) {
+  #features .row:nth-child(2) .text .detail {
+    padding-left: 0rem;
+    width: 90%;
+    margin-top: 0;
+  }
+  #features .row:nth-child(2) .text .detail p {
+    font-size: 0.75rem;
+    width: 100%;
+    display: inline;
+  }
+}
+#features .row:nth-child(2) .text .detail h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row:nth-child(2) .text .detail h3 {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 600px) {
+  #features .row:nth-child(2) .text .detail h3 {
+    font-size: 1.25rem;
+    width: 80%;
+  }
+}
+#features .row:nth-child(2) .text .detail:nth-child(1) {
+  margin-right: -20%;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row:nth-child(2) .text .detail:nth-child(1) {
+    margin-right: -5%;
+  }
+}
+@media (max-width: 600px) {
+  #features .row:nth-child(2) .text .detail:nth-child(1) {
+    margin-right: 0;
+  }
+}
+#features .row:nth-child(2) .text .detail:nth-child(2) {
+  margin-top: 10rem;
+  margin-left: 8rem;
+}
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+  #features .row:nth-child(2) .text .detail:nth-child(2) {
+    margin-top: 6rem;
+    margin-left: 0;
+    margin-right: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  #features .row:nth-child(2) .text .detail:nth-child(2) {
+    margin-top: 3rem;
+    margin-right: 2rem;
   }
 }/*# sourceMappingURL=styles.css.map */
