--- a/styles.scss
+++ b/styles.scss
@@ -89,6 +89,7 @@ h1.second{
 
 #features{
     height: fit-content;
+
     .row{
         display: flex;
         margin: 0 auto;
@@ -99,6 +100,7 @@ h1.second{
         @include tablet{
             gap: 1.5rem;
             margin-left: 0rem;
+            margin-bottom: 35vh;
         }
         @include mobile{
             flex-direction: column;
@@ -108,13 +110,10 @@ h1.second{
         }
         .img-stack{
             position: relative;
-            img{
-                //position: absolute;
-            }
             img:nth-child(1){
                 height: 65vh;
                 @include tablet{
-                    height: 50vh;
+                    height: 40vh;
                 }
                 @include mobile{
                     height: 50vh;
@@ -127,7 +126,7 @@ h1.second{
                 bottom: -20%;
                 right: -30%;
                 @include tablet{
-                    height: 30vh;
+                    height: 20vh;
                     right: -10%;
                     bottom: -30%;
                 }
@@ -145,7 +144,7 @@ h1.second{
                 padding-left: 1rem;
                 width: 80%;
                 @include tablet{
-                    padding-left: 0;
+                    padding-left: 1.5rem;
                     margin-top: 2.5rem;
                     p{
                         font-size: 0.75rem;
@@ -185,6 +184,104 @@ h1.second{
                 @include mobile{
                     margin-top: 3rem;
                     margin-left: 2rem;
+                }
+            }
+        }
+    }
+
+    .row:nth-child(2){
+        flex-direction: row-reverse;
+        margin-left: 0;
+        @include mobile{
+            flex-direction: column;
+        }
+        .img-stack{
+            position: relative;
+            img:nth-child(1){
+                height: 60vh;
+                @include tablet{
+                    height: 40vh;
+                }
+                @include mobile{
+                    height: 45vh;
+                }
+            }
+            img:nth-child(2){
+                height: 40vh;
+                box-shadow: 8px 12px 4px rgba($color: #000, $alpha: 0.25);
+                position: absolute;
+                bottom: -40%;
+                left: -25%;
+                @include tablet{
+                    height: 20vh;
+                    left: -10%;
+                    bottom: -30%;
+                }
+                @include mobile{
+                    height: 25vh;
+                    left: -10%;
+                    bottom: -30%;
+                }
+            }
+        }
+        .text{
+            margin-top: 2.5rem;
+            .detail{
+                width: 100%;
+                float: right;
+                margin-top: 10rem;
+                @include tablet{
+                    padding-left: 0;
+                    margin-top: 2.5rem;
+                    p{
+                        font-size: 0.75rem;
+                        width: 100%;
+                        display: inline;
+                    }
+                }
+                @include mobile{
+                    padding-left: 0rem;
+                    width: 90%;
+                    margin-top: 0;
+                    p{
+                        font-size: 0.75rem;
+                        width: 100%;
+                        display: inline;
+                    }
+                }
+                h3{
+                    font-size: 1.5rem;
+                    margin-bottom: 1.5rem;
+                    @include tablet{
+                        font-size: 1rem;
+                        margin-bottom: 1rem;
+                    }
+                    @include mobile{
+                        font-size: 1.25rem;
+                        width: 80%;
+                    }
+                }
+            }
+            .detail:nth-child(1){
+                margin-right: -20%;
+                @include tablet{
+                    margin-right: -5%;
+                }
+                @include mobile{
+                    margin-right: 0;
+                }
+            }
+            .detail:nth-child(2){
+                margin-top: 10rem;
+                margin-left: 8rem;
+                @include tablet{
+                    margin-top: 6rem;
+                    margin-left: 0;
+                    margin-right: 2rem;
+                }
+                @include mobile{
+                    margin-top: 3rem;
+                    margin-right: 2rem;
                 }
             }
         }
