--- a/styles.scss
+++ b/styles.scss
@@ -287,3 +287,89 @@ h1.second{
         }
     }
 }
+
+.profile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40vh;
+    @include mobile{
+        flex-direction: column;
+        gap: 4rem;
+        text-align: center;
+    }
+    h3{
+        font-size: 1.5rem;
+        margin-bottom: 1.5rem;
+        @include tablet{
+            font-size: 1rem;
+            margin-bottom: 1rem;
+        }
+        @include mobile{
+            font-size: 1.25rem;
+            width: 80%;
+        }
+    }
+    .text,img,.more{
+        width: 33%;
+        @include mobile{
+            width: 100%;
+        }
+    }
+    .text{
+        padding-left: 2rem;
+        @include tablet{
+            padding-left: 0;
+            padding-right: 1rem;
+        }
+        @include mobile{
+            padding-left: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        h3{
+            @include mobile{
+                display: block;
+                width: 100%;
+            }
+        }
+        p{
+            width: 110%;
+            display: inline;
+            @include tablet{
+                font-size: 0.75rem;
+                width: 100%;
+                display: inline;
+            }
+            @include mobile{
+                font-size: 0.75rem;
+                width: 80% !important;
+                display: block;
+            }
+        }
+        
+    }
+    img{
+        height: 60vh;
+        object-fit: contain;
+        @include tablet{
+            padding-right: 1rem;
+        }
+    }
+    .more{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        p{
+            margin-bottom: 1rem;
+        }
+        .capsule:nth-child(3){
+            margin-left: 5rem!important;
+        }
+        .capsule:nth-child(4){
+            margin-right: 3rem!important;
+            margin-bottom: 2rem;
+        }
+    }
+}
