--- a/styles.css
+++ b/styles.css
@@ -276,16 +276,19 @@ h1.first {
   max-height: 100vh;
   -o-object-fit: contain;
      object-fit: contain;
-  margin-top: -2rem;
+  margin-top: -4rem;
+  margin-left: 2rem;
 }
 @media screen and (min-width: 600px) and (max-width: 1100px) {
   .hero .right img {
+    margin-top: -2rem;
     margin-left: 2rem;
   }
 }
 @media (max-width: 600px) {
   .hero .right img {
     margin-top: 1.5rem;
+    margin-left: 0;
   }
 }
 
