--- a/styles.scss
+++ b/styles.scss
@@ -83,12 +83,15 @@ h1.first{
             width: 100%;
             max-height: 100vh;
             object-fit: contain;
-            margin-top: -2rem;
+            margin-top: -4rem;
+            margin-left: 2rem;
             @include tablet{
+                margin-top: -2rem;
                 margin-left: 2rem;
             }
             @include mobile{
                 margin-top: 1.5rem;
+                margin-left: 0;
             }
         }
     }
