--- a/styles.css
+++ b/styles.css
@@ -294,13 +294,16 @@ h1.first {
 
 .intro {
   padding-block: 20rem;
-  display: flex;
-  justify-content: center;
+  padding-bottom: 10rem;
 }
 @media (max-width: 600px) {
   .intro {
     padding-block: 14rem;
   }
+}
+.intro .flex {
+  display: flex;
+  justify-content: center;
 }
 .intro h2 {
   width: 50%;
@@ -320,18 +323,17 @@ h1.first {
   }
 }
 
-h1.second {
-  position: absolute;
-  left: 5%;
+/*
+h1.second{
+    position: absolute;
+    left: 5%;
+    @include mobile{
+        margin-top: 60%;
+        left: -20%;
+        font-size: 10rem;
+    }
 }
-@media (max-width: 600px) {
-  h1.second {
-    margin-top: 60%;
-    left: -20%;
-    font-size: 10rem;
-  }
-}
-
+*/
 #features {
   height: -moz-fit-content;
   height: fit-content;
