--- a/styles.css
+++ b/styles.css
@@ -145,12 +145,13 @@ ul {
   overflow: hidden;
   word-break: keep-all;
   word-wrap: normal;
-  cursor: default;
+  cursor: auto;
   width: 100vw;
 }
 @media (max-width: 600px) {
   .special {
-    font-size: 14rem;
+    width: 100%;
+    font-size: 10rem;
     overflow: hidden;
   }
 }
@@ -182,7 +183,7 @@ h1 {
 
 h1.first {
   position: absolute;
-  left: -10%;
+  left: 0%;
   top: 3%;
 }
 
@@ -303,6 +304,7 @@ h1.first {
 @media (max-width: 600px) {
   .intro {
     padding-block: 14rem;
+    padding-bottom: 2rem !important;
   }
 }
 .intro .flex {
@@ -348,7 +350,7 @@ h1.second{
   gap: 8rem;
   align-items: center;
   margin-left: 4rem;
-  margin-bottom: 50vh;
+  margin-bottom: 40vh;
 }
 @media screen and (min-width: 600px) and (max-width: 1100px) {
   #features .row {
@@ -361,7 +363,7 @@ h1.second{
   #features .row {
     flex-direction: column;
     margin-left: 0rem;
-    margin-top: 20vh;
+    margin-top: 10vh;
     margin-bottom: 30vh;
   }
 }
@@ -603,6 +605,7 @@ h1.second{
     flex-direction: column;
     gap: 4rem;
     text-align: center;
+    margin-bottom: 10vh;
   }
 }
 .profile h3 {
